--- a/UPN.ExamenT2.DataAccess/UPN.ExamenT2.Repository.csproj
+++ b/UPN.ExamenT2.DataAccess/UPN.ExamenT2.Repository.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repository\" />
+    <ProjectReference Include="..\UPN.ExamenT2.CrossCutting\UPN.ExamenT2.CrossCutting.csproj" />
   </ItemGroup>
 
 </Project>
